<resources>
    <string name="app_name">土壤安全管理</string>
    <string name="st_set_title">个人中心</string>
    <string name="menu_tab1">首页</string>
    <string name="menu_tab2">工具</string>
    <string name="menu_tab3">设置</string>
    <string name="menu_fun1">企业查询</string>
    <string name="menu_fun2">违法案件查询</string>
    <string name="menu_fun3">违法上报</string>
    <string name="menu_fun4">整改跟踪</string>
    <string name="menu_fun5">卷宗管理</string>
    <string name="menu_fun6">隐患排查</string>
    <string name="menu_fun7">事故登记</string>
    <string name="menu_fun8">应急救援</string>
    <string name="tool_fun1">数据词典</string>
    <string name="tool_fun2">电话本</string>
    <string name="set_fun1">修改密码</string>
    <string name="set_fun2">系统参数设置</string>
    <string name="set_fun3">清除数据</string>
    <string name="set_fun4">图片大小</string>
    <string name="set_fun5">检查更新</string>
    <string name="set_note1">提供密码修改功能</string>
    <string name="set_note2">设置系统相关参数</string>
    <string name="set_note3">清除指定时间的数据</string>
    <string name="set_note4">设置拍摄像素与水印字体</string>
    <string name="set_note5">检查更新</string>
    <string name="company_search_hint">输入企业名称或定位选择周边企业</string>
    <string name="company_info">企业信息</string>
    <string name="illegal_info">违法案件信息</string>
    <string name="company_fun">企业职能</string>
    <string name="company_goods">企业物资</string>
    <string name="input_nogps">无GPS信息,请手工输入企业名称！</string>
    <string name="input_company_error">请检查输入的企业名称</string>
    <string name="input_company_name">请输入企业名称</string>
    <string name="input_illegal_address">请输入违法地点</string>
    <string name="input_illegal_type">请选择违法类型</string>
    <string name="input_illegal_note">请输入违法说明</string>
    <string name="input_danger_address">请输入隐患地点</string>
    <string name="input_danger_type">请选择隐患类型</string>
    <string name="input_danger_note">请输入隐患说明</string>
    <string name="input_change_case">请选择违法案件</string>
    <string name="input_case_danger">请选择违法隐患</string>
    <string name="input_change_status">请输入整改进度</string>
    <string name="input_change_warn">请选择是否预警</string>
    <string name="input_accident_type">请选择事故类型</string>
    <string name="input_accident_grade">请选择事故等级</string>
    <string name="input_accident_address">请输入事故地点</string>
    <string name="input_accident_do">请输入处理方式</string>
    <string name="input_accident_note">请输入事故简介</string>
    <string name="input_file_name">请输入卷宗名称</string>
    <string name="company_no_illegal">企业无违法记录，请重新输入企业名称</string>
    <string-array name="fun_types">
        <item>企业</item>
        <item>职能</item>
        <item>人员</item>
    </string-array>
    <string-array name="fun_types_hint">
        <item>请输入企业名称</item>
        <item>请输入组织职能</item>
        <item>请输入人员名称</item>
    </string-array>
    <string-array name="goods_types">
        <item>企业</item>
        <item>功能</item>
        <item>名称</item>
        <item>地点</item>
    </string-array>
    <string-array name="goods_types_hint">
        <item>请输入企业名称</item>
        <item>请输入物资功能</item>
        <item>请输入物资名称</item>
        <item>请输入物资存放地点</item>
    </string-array>
    <string name="dialog_title">确认删除</string>
    <string name="selectfile">选择xml文件导入</string>
    <string name="root">根目录</string>
    <string name="returnparent">返回上级目录</string>
    <string name="rootcurrently">已经是根目录</string>
    <string name="importsuccess">数据导入成功！</string>
    <string name="importfile">导入</string>
    <string name="help">帮助</string>
    <string name="gztz">工作台账</string>
    <string name="wfcl">违法处理</string>
    <string name="xxzx">消息中心</string>
    <string name="zfjc">执法检查</string>
    <string name="sjcd">数据词典</string>
    <string name="cktp">查看图片</string>
    <string name="sgdj">事故登记</string>
    <string name="sgdjjl">事故登记记录</string>
    <string name="zf">执法</string>
    <string name="qw">勤务</string>
    <string name="yj">预警</string>
    <string name="gj">工具</string>
    <string name="setting">设置</string>
    <string name="qcsj">清除数据</string>
    <string name="qcsj_dec">清除指定时间的数据</string>
    <string name="loading_hd">登录中，请稍后…</string>
    <string name="wfjl">违法记录</string>
    <string name="wfjljl">违法采集记录</string>
    <string name="rcqw">日常勤务</string>
    <string name="rcqwjl">日常勤务记录</string>
    <string name="xzqzcsjl">行政强制措施记录</string>
    <string name="jycxcfjl">简易程序处罚决定记录</string>
    <string name="tools">常用工具</string>
    <string name="jdccx">违法案件查询</string>
    <string name="jsycx">生产企业查询</string>
    <string name="zpyzt">图片设置</string>
    <string name="sbzc">识别注册</string>
    <string name="xzzp">选择照片</string>
    <string name="viopic">执法照片</string>
    <string name="picsize">设置像素与字体</string>
    <string name="textSize">图片上字体大小</string>
    <string name="txtSize">字体大小</string>
    <string name="currenttextsize">当前设置字体大小：</string>
    <string name="currentpicsize">当前设置违法图片大小：</string>
    <string name="picsize_desc">设置拍摄照片的分辨率和字体大小</string>
    <string name="settingsuccess">设置成功！</string>
    <string name="dutypic">勤务与事故照片</string>
    <string name="inputNum">请输入编号</string>
    <string name="auditfailed">的违章审核失败，点击查看详情</string>
    <string name="auditsuccess">的违章审核成功</string>
    <string name="number">编号为</string>
    <string name="inputRoad">请输入事故路段：</string>
    <string name="inputKm">填入公里数</string>
    <string name="inputDesc">请输入描述</string>
    <string name="selectTime">请选择时间：</string>
    <string name="selectAccCarCount">请选择事故车辆数：</string>
    <string name="inputHurtCount">请输入受伤人数</string>
    <string name="inputDiedCount">请输入死亡人数</string>
    <string name="inputAccDesc">请输入事故简介</string>
    <string name="selectAccProgress">请选择事故处理进度：</string>
    <string name="getUpdate">获取更新</string>
    <string name="getUpdate_desc">在网络通畅的条件下点击该按钮可获取本地黑名单是否最新，如果非最新，将弹出对话框提示用户是否更新，更新完成后，在此显示黑名单更新内容</string>
    <string name="showBlackList">查看黑名单</string>
    <string name="selectDealtype">请选择处理类型:</string>
    <string name="juedingshubianhao">处罚决定书编号:</string>
    <string name="huoqujuedingshubianhao">正在获取决定书编号</string>
    <string name="beichufarenxinxi">被处罚人信息</string>
    <string name="beichufarenxingming">驾驶员姓名</string>
    <string name="beichufarenphone">驾驶员联系方式</string>
    <string name="jdcjszh">机动车驾驶证号</string>
    <string name="jdcjszdabh">机动车驾驶证档案编号</string>
    <string name="wfxx">违法信息</string>
    <string name="createNew">新建</string>
    <string name="photoAlbum">相册</string>
    <string name="next">下一步</string>
    <string name="selectDutyType">请选择勤务类型:</string>
    <string name="inputDescrib">请输入描述信息:</string>
    <string name="selectRoad">请选择路段：</string>
    <string name="xianchangtupian">现场图片</string>
    <string name="xinjianxingzheng">新建行政强制措施</string>
    <string name="pingzhengbianhao">凭证编号:</string>
    <string name="huoqubianhao">正在获取凭证编号</string>
    <string name="dangshirenxinxi">当事人信息</string>
    <string name="dangshirenxingming">驾驶员姓名</string>
    <string name="dangshirenPhone">驾驶员联系方式</string>
    <string name="inputLawName">请输入法规名</string>
    <string name="dijitiao">第几条</string>
    <string name="dijikuan">第几款</string>
    <string name="dijixiang">第几项</string>
    <string name="wfdm">违法代码</string>
    <string name="wfdm01">违法代码:</string>
    <string name="fast">快捷操作</string>
    <string name="notHandledPic">未处理图片</string>
    <string name="blackListRecord">黑名单拦截记录</string>
    <string name="videoCompare">视频对比</string>
    <string name="updateBlackList">更新黑名单</string>
    <string name="yhxx">用户信息</string>
    <string name="wfcj">违法采集</string>
    <string name="wdxx">我的信息</string>
    <string name="gzltj">工作量统计</string>
    <string name="xczf">现场执法</string>
    <string name="notifyPlateTip">请输入驾驶证号或者使用识别功能：</string>
    <string name="lawText">法律条文：</string>
    <string name="money">处罚金额:</string>
    <string name="dealWay">处理方式：</string>
    <string name="xjsgzrrd">新建事故责任认定</string>
    <string name="inputUserName">请输入用户名</string>
    <string name="inputPwd">请输入密码</string>
    <string name="refreshList">刷新列表</string>
    <string name="startVideo">发起视频</string>
    <string name="clickToLoad">点击加载…</string>
    <string name="loading01">加载中…</string>
    <string name="docRecord">文档记录</string>
    <string name="addressBook_tip">输入姓名或电话号码查询</string>
    <string name="shipinhuamian">在此显示视频画面</string>
    <string name="biduijieguo">在此显示比对结果，如果发现黑名单车辆，响铃提示，并显示属于哪种黑名单</string>
    <string name="returnDataError">网络返回数据异常！</string>
    <string name="carAmount">车辆数量</string>
    <string name="xunluoqinwu">巡逻勤务</string>
    <string name="loadNewData">加载新数据</string>
    <string name="noMoreData">无更多数据</string>
    <string name="uploaded">已上传</string>
    <string name="notUploaded">未上传</string>
    <string name="NoAuthority">无权限</string>
    <string name="Signed">已签收</string>
    <string name="Acked">已反馈</string>
    <string name="Noinfo">反馈记录不存在</string>
    <string name="checkError_net">网络异常，查询失败</string>
    <string name="checkError_data">数据异常，查询失败</string>
    <string name="loadError_net">网络异常，加载数据失败</string>
    <string name="loadError_data">数据异常，加载数据失败</string>
    <string name="zqmj">执勤民警</string>
    <string name="ifUpload">是否上传</string>
    <string name="delete">删除</string>
    <string name="warning">警告</string>
    <string name="warningDelete">本数据未上传，确认要删除？</string>
    <string name="mustDelete">非删不可</string>
    <string name="notSure">我再想想</string>
    <string name="type">类型：</string>
    <string name="type01">类型</string>
    <string name="type02">类型</string>
    <string name="blackType">黑名单类型：</string>
    <string name="blackRefreshCompleted">黑名单更新完成</string>
    <string name="checkVioInfo">查看违法信息</string>
    <string name="selectOption">选择操作</string>
    <string name="fillInMoney">请填写处罚金额！</string>
    <string name="checkMoney">请检查处罚金额！</string>
    <string name="dataSaved">数据已保存！</string>
    <string name="kmNotNull">公里数不能为空！</string>
    <string name="checkKm">请检查公里数！</string>
    <string name="descNotNull">描述不能为空！</string>
    <string name="desc">描述</string>
    <string name="desc01">描述:</string>
    <string name="xiangguandanwei">相关单位（点击单位可获取其联系方式）：</string>
    <string name="qinwuleixing">勤务类型</string>
    <string name="sureConnectBlueTooth">请确认已连接蓝牙打印设备！</string>
    <string name="releasingNum">正在释放凭证编号</string>
    <string name="getNum">获取编号</string>
    <string name="print">打印</string>
    <string name="noprint">不打印</string>
    <string name="printandupdate">上传</string>
    <string name="iniBlueToothPrinter">正在初始化蓝牙打印机，请稍后</string>
    <string name="iniBlueToothPrinterDetail">正在初始化蓝牙打印机，请稍后\\n如果长时间无法打印请先将数据进行保存</string>
    <string name="connectPrinter">连接设备并打印</string>
    <string name="printError">打印失败，请检查打印机！</string>
    <string name="numError">编号异常，请检查网络！</string>
    <string name="checkName">请检查驾驶员姓名！</string>
    <string name="checkVioName">请检查驾驶员姓名！</string>
    <string name="checkPhoneNum">请检查驾驶员联系方式！</string>
    <string name="checkVioPhoneNum">请检查驾驶员联系方式！</string>
    <string name="checkDriverId">请检查驾驶证号！</string>
    <string name="checkRecordId">请检查档案编号！</string>
    <string name="checkDriveType">请检查准驾类型！</string>
    <string name="checkPlateNum">请检查号牌号码！</string>
    <string name="checkPlateorganization">请检查车牌发证机关！</string>
    <string name="checkDriveLicenorganization">请检查驾照发证机关！</string>
    <string name="checkVioContent">请检查违法行为！</string>
    <string name="checkVioAction">请检查处理方式！</string>
    <string name="checkVioMoney">请检查罚款金额！</string>
    <string name="checkVioValue">请检查记分！</string>
    <string name="checkLaw">请检查法律规定！</string>
    <string name="checkLine">请检查条款项！</string>
    <string name="checkCode">请检查违法代码！</string>
    <string name="checkPunishment">请检查行政强制措施！</string>
    <string name="checkAccProcess">请检查事故过程！</string>
    <string name="checkTiaojiejieguo">请检查调解结果！</string>
    <string name="checkweather">请检查天气！</string>
    <string name="more_worknote">请选择工作覆盖区域</string>
    <string name="btn_pre">上一步</string>
    <string name="btn_next">下一步</string>
    <string name="workroad_city">城市公路</string>
    <string name="serveraddress">管理平台服务器地址</string>
</resources>